# bourso-api

./: .gitignore  Cargo.toml  README.md  bourso-launchd.sh  compose.yml  flake.nix  rust-toolchain.toml
.devcontainer/: devcontainer.json
.github/workflows/: cicd.yml  coverage.yml  scorecard.yml
src/: cli.rs  keyring.rs  lib.rs  main.rs  qrcode.rs  settings.rs  validate.rs
src/api/: errors.rs  handlers.rs  mod.rs  models.rs  routes.rs  server.rs
src/bourso/: client.rs  config.rs  constants.rs  mod.rs  utils.rs  virtual_pad.rs
src/bourso/client/: account.rs  mod.rs  virtual_pad.rs
src/bourso/client/trade/: order.rs
src/bourso_api/: Cargo.toml  README.md
src/bourso_api/src/: account.rs  constants.rs  lib.rs  types.rs
src/bourso_api/src/client/: account.rs  config.rs  error.rs  mod.rs  qrcode.rs  virtual_pad.rs
src/bourso_api/src/client/trade/: error.rs  feed.rs  mod.rs  order.rs  tick.rs
src/bourso_api/src/client/transfer/: error.rs  mod.rs
src/commands/: accounts.rs  config.rs  mod.rs  quote.rs  transfer.rs
src/commands/trade/: mod.rs  order.rs
src/services/: auth.rs  mod.rs
src/settings/: constants.rs  consts.rs  logging.rs  mod.rs  settings.rs  store.rs
src/ux/: mod.rs  progress.rs
