[package]
name        = "bourso-cli"
version     = "1.0.0"
edition     = "2021"
authors     = ["@azerpas"]
description = "BoursoBank/Boursorama CLI"
repository  = "https://github.com/azerpas/bourso-api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bourso_api         = { path = "./src/bourso_api" }
tokio              = { version = "1.48.0", features = ["full"] }
anyhow             = { version = "1.0.100" }
clap               = { version = "4.5.51", features = ["derive"] }
rpassword          = { version = "7.4.0" }
directories        = { version = "6.0.0" }
serde              = { version = "1.0.189", features = ["derive"] }
serde_json         = { version = "1.0.145" }
tracing            = { version = "0.1.41" }
tracing-appender   = { version = "0.2.3" }
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter", "json"] }
futures-util       = { version = "0.3.31" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
