[package]
authors     = ["@azerpas"]
description = "BoursoBank/Boursorama CLI"
edition     = "2021"
name        = "bourso-cli"
repository  = "https://github.com/azerpas/bourso-api"
version     = "1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow             = { version = "1.0.100" }
bourso_api         = { path = "./src/bourso_api" }
clap               = { version = "4.5.53", features = ["derive"] }
directories        = { version = "6.0.0" }
futures-util       = { version = "0.3.31" }
rpassword          = { version = "7.4.0" }
serde              = { version = "1.0.189", features = ["derive"] }
serde_json         = { version = "1.0.145" }
tokio              = { version = "1.48.0", features = ["full"] }
tracing            = { version = "0.1.41" }
tracing-appender   = { version = "0.2.3" }
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter", "json"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[workspace]
members = [".", "src/bourso_api"]
