[package]
name       = "bourso-cli"
version    = "0.5.0"
edition    = "2021"
repository = "https://github.com/azerpas/bourso-api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bourso_api         = { path = "./src/bourso_api" }
tokio              = { version = "1.33.0", features = ["full"] }
anyhow             = { version = "1.0.75" }
clap               = { version = "4.4.6" }
rpassword          = { version = "7.2.0" }
directories        = { version = "5.0.1" }
serde              = { version = "1.0.189", features = ["derive"] }
serde_json         = { version = "1.0.107" }
tracing            = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter", "json"] }
futures-util       = { version = "0.3.31" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
