[package]
edition = "2021"
name    = "bourso_api"
version = "0.4.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow               = { version = "1.0.75" }
async-stream         = { version = "0.3.6" }
chrono               = { version = "0.4.39" }
clap                 = { version = "4.5.26", features = ["derive"] }
cookie_store         = { version = "0.21.1" }
derive_more          = { version = "2.0.1", features = ["from", "into", "as_ref"] }
futures-util         = { version = "0.3.31" }
lazy_static          = { version = "1.4.0" }
regex                = { version = "1.10.2" }
reqwest              = { version = "0.12.12", features = ["multipart", "cookies"] }
reqwest_cookie_store = { version = "0.8.0" }
serde                = { version = "1.0.189", features = ["derive"] }
serde_json           = { version = "1.0.107" }
thiserror            = { version = "2.0.17" }
tracing              = { version = "0.1.41" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
